# spherepop

./: .gitignore  .reflog  Abstraction as Reduction - audio overview.txt  Active Geodesic Inference.tex  Active-Geodesic-Inference.md  Computation After Storage.tex  Computation as Semantic Maintenance.tex  Computation_Is_Merge_and_Collapse.txt  Errata and notes.txt  Event-historical Aggregation.tex  History as Identity - v01.tex  History as Identity - v02.tex  History as Identity.tex  Introducción a Spherepop - v01.tex  Introducción a Spherepop.tex  Introduction to Spherepop Calculus.mhtml  Joy-of-Spherepop-draft-01.tex  Joy-of-Spherepop.tex  Mathematicians and set theory.mhtml  Operational-Mereology.tex  README.md  RSVP Simulations.ipynb  Scope as Geometry.tex  Scope-as-Geometry.md  Spherepop Trajectory Collapse.tex  Spherepop-OS.tex  Spherepop_Trust_Hysteresis.ipynb  Structure Proceeds Symbol.aux  Structure Proceeds Symbol.out  Structure Proceeds Symbol.tex  Structured Irreversibility.tex  The Calculus of Commitment.tex  The Forkability of Time.tex  Throwing-the-game.tex  attention-as-minimal-relational-interaction.tex  blog-post.md  briefing-document.md  computing-with-spherepop.tex  conceptual-primer.md  demo.html  (+29 more)
compiler/: ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  LICENSE  Makefile  README.md  ROADMAP.md  file-list.txt
compiler/.github/ISSUE_TEMPLATE/: bug_report.md  semantic-regression.md
compiler/.github/workflows/: build.yml
compiler/benchmarks/: constraint_resolution.sp  nested_evaluation.sp
compiler/cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake  spherepop.pc.in
compiler/docs/: action-formalism.md  admissibility.md  bubble-semantics.md  builtin-functions.md  bytecode.md  category-theory.md  cognitive-foundations.md  collapse-operators.md  constraint-engine.md  embedding-api.md  evaluator.md  formal-semantics.md  geometry-runtime.md  getting-started.md  graph-reduction.md  histories.md  index.md  interpreter-architecture.md  language-overview.md  language-reference.md  plugin-system.md  provenance.md  renderer-api.md  runtime-memory-model.md  sheaf-semantics.md  standard-library.md  thermodynamic-semantics.md  topology.md  visual-computation.md  visualization-api.md  vm-design.md
compiler/examples/: action_minimization.sp  arithmetic.sp  bubble_nesting.sp  clio_projection.sp  hello.sp  manifold_walk.sp  observerhood.sp  provenance.sp  recursive_collapse.sp  semantic_navigation.sp  sheaf_gluing.sp  thermodynamic_reduction.sp  visual_topology.sp
compiler/grammar/: grammar.ebnf
compiler/scripts/: benchmark.sh  build.sh  format.sh
compiler/spec/: grammar.ebnf  operational-semantics.md
compiler/src/: config.c  main.c  repl.c  sp_common.h
compiler/src/vm/: vm.c  (+4 more)
(+515 files in other folders)
